# OpenCV-Learning

./: CMakeLists.txt~  CmakeLists.txt~  README.md
Proj/build-opencv-Desktop_Qt_5_5_1_GCC_64bit-Debug/: Makefile
Proj/opencv/: opencv.pro
src/: CMakeLists.txt  CMakeLists.txt~  access2Pixel.cpp  accessPixel.cpp  bilateraFliter.cpp  blurFliter.cpp  boxFliter.cpp  canny.cpp  comprehensive.cpp  contrastBrightness.cpp  convexHull.cpp  creatTrackbar.cpp  dilateAndErode.cpp  drawCircle.cpp  drawSample.cpp  findCounters.cpp  floodFill.cpp  gaussianBlur.cpp  histogram.cpp  houghCircle.cpp  houghLines.cpp  hsHistogram.cpp  imwrite.cpp  linearFliterComprehensive.cpp  openPicture.cpp  pyrDown_Up.cpp  resize.cpp  setMouseCallback.cpp  setROI.cpp  splitMerge.cpp  testMat.cpp  trackMarker.cpp  trackbar_DilateAndErode.cpp  trackbar_contrast_brightness.cpp  trackbar_findCounters.cpp  trackbar_threshold.cpp  wrapAffine.cpp  yamlRead.cpp  yamlWrite.cpp
